[gd_scene load_steps=4 format=3 uid="uid://daa4mye5x3rm5"]

[ext_resource type="Script" path="res://Scripts/tiles_folder.gd" id="1_mjckw"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="2_umtpx"]
[ext_resource type="Texture2D" uid="uid://bixpneadw16wk" path="res://Assets/images/open button.png" id="3_pmmt0"]

[node name="TilesFolder" type="Node2D"]
z_index = 3
script = ExtResource("1_mjckw")

[node name="Folder" type="Node2D" parent="."]

[node name="Button" type="Button" parent="Folder"]
offset_left = 656.0
offset_top = 152.0
offset_right = 856.0
offset_bottom = 223.0
focus_mode = 0
theme = ExtResource("2_umtpx")
keep_pressed_outside = true

[node name="arrow" type="Sprite2D" parent="Folder/Button"]
position = Vector2(100, 42)
scale = Vector2(3, 3)
texture = ExtResource("3_pmmt0")
region_rect = Rect2(0, 0, 32, 32)

[node name="ColorRect" type="ColorRect" parent="Folder"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -268.0
offset_right = 960.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="ColorRect" type="ColorRect" parent="Folder/ColorRect"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 424.0
color = Color(0.105882, 0.105882, 0.105882, 1)

[node name="ColorRect" type="ColorRect" parent="Folder/ColorRect/ColorRect"]
layout_mode = 0
offset_left = -32.0
offset_right = 1920.0
offset_bottom = 408.0
color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[connection signal="button_down" from="Folder/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Folder/Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Folder/Button" to="." method="_on_button_pressed"]
